Updates to blog

--- a/libs/jade/blog-home.jade
+++ b/libs/jade/blog-home.jade
@@ -18,9 +18,9 @@ block content
 	.articleContent
 		.flex-container.flex-row
 			.title__subheading--blog
-				.tag
+				.blog-tag
 					| Research
-				.tag
+				.blog-tag
 					| Content
 				h2 #[a(href="blog-post.html") Making things simpler: Personal Independence Payment (PIP)]
 				p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design]
@@ -29,9 +29,9 @@ block content
 				a(href="#").btn-secondary.btn-small(type="button") Read full article
 
 			.title__subheading--blog
-				.tag
+				.blog-tag
 					| Design
-				.tag
+				.blog-tag
 					| Research
 				h2 #[a(href="blog-post.html") Introducing… immigration advice]
 				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
