--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -37,8 +37,9 @@
 
         .cards(style="color:#fff; background-color:#32457E;")
             .card-banner-top(style="background-color:#32457E;")
-                p(style="color:#fff;") Get updates by email
+                p(style="color:#fff;") Get updates of new blogs here
             .card-text
+                p If you would like to test any of the new future research and testing you can sign up on the #[a(href="#" style="color:#FCBB69;") Get Involved page].
                 fieldset
                     label(for="name", style="color:#fff;") Your name
                     div(style="margin-bottom: 10px;")
