--- a/libs/jade/blog-home-1.jade
+++ b/libs/jade/blog-home-1.jade
@@ -27,9 +27,9 @@ block content
 	.articleContent
 		div
 			.title__subheading--blog
-				.tag
+				.blog-tag
 					| Research
-				.tag
+				.blog-tag
 					| Content
 				h2 #[a(href="#") Making things simpler: Personal Independence Payment (PIP)]
 				p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design] 
@@ -39,9 +39,9 @@ block content
 					button.btn-secondary.btn-small(type="button") Read full article
 
 			.title__subheading--blog
-				.tag
+				.blog-tag
 					| Design
-				.tag
+				.blog-tag
 					| Research
 				h2 #[a(href="#") Introducing… immigration advice]				
 				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration] 
