Add get involved mockup page to blog

--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -88,7 +88,7 @@
 		border-bottom: none;
 		font-weight: 600;
 		color: white;
-		&:hover {
+		&:hover, &:active {
 			color: @heritage-blue;
 			border-bottom: none;
 		}
