--- a/libs/template/template-blog.jade
+++ b/libs/template/template-blog.jade
@@ -143,7 +143,7 @@ html
 					.styleguide--header--content-nav
 						a(href="blog-team.html") The Team
 						a(href="#") About
-						a(href="#") Get involved
+						a(href="blog-get-involved.html") Get involved
 						a(href="#") Jobs
 
 
