--- a/libs/jade/blog-get-involved.jade
+++ b/libs/jade/blog-get-involved.jade
@@ -20,44 +20,33 @@ block content
 		div
 			h1(style="margin-top:0.2rem;") Get involved
 
-			p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design]
-
 			block toolbars
 				include ../template/toolbar-blog.jade
 
-			p Content is only as good as the advice that sits behind it. The values inherent in that advice come from an understanding of our audience – their goals and their problems. By designing content that focuses on these things we can create something original and valuable that users will engage with and understand.
+			p The digital team is redesigning our online content and building a new case management system for Citizens Advice based on user need.
 
-			p Working with advisers is an an essential part of our content design process.
+			p Starting with real user needs and understanding the tasks that people actually need to complete is key to our approach and there are lots of ways you can help.
 
-			p How we involved advisers
+			h3 If you work in a local Citizens Advice
 
-			p Here’s an outline of just some of the ways advisers have been helping us design content for people looking for help to fill out their Personal Independence Payment (PIP) claim form.
+			p We always need local staff and volunteers to test out our other ideas and prototypes and give us feedback, particularly those from local Citizens Advice we’ve not already worked with.
 
-			ol
-				li We sat down with advisers in their local Citizens Advice and, armed with little more than a copy of the claim form and some post-it notes, listened to what advisers had to say, This helped us identify user problems (there were lots).
+			p Please email us with your name, role and location and we’ll add you to our mailing list for research and testing.
 
-				li We got a group of advisers together in a workshop and delved more deeply into the problems identified. This helped us validate and understand those problems.
+			p Hundreds of staff and volunteers are already helping us with our research and testing. This map shows all the locations we’ve been working with and where we have gaps:
 
-				li We came up with different ways to help users fill in their claim form and tested it with the our database of 500 or so advisers. This helped us rethink our approach and prioritise the problems we could solve.
+			iframe(src="https://fusiontables.googleusercontent.com/fusiontables/embedviz?q=select+col2+from+16BWr4oiZboc2VpRHEJt37SmzHVoN-EzKM9aLkkMQ+where+col1+in+(%27Super+tester%27,+%27Tester%27,+%27Not+signed+up%27)&viz=MAP&h=false&lat=52.36404897789263&lng=-1.6940654999999651&t=1&z=7&l=col2&y=2&tmplt=2&hml=ONE_COL_LAT_LNG", width="100%", height="600px", scrolling="no")
 
-				li We sent advisers an early version of the advice we’d designed and asked them to feed back their thoughts (the good, the bad and the ugly – it’s all gold to us). This helped reassure us that the what we had scoped out resembled “good”.
+			h3 If you get advice online, or might in future
 
-			p If someone can go to an adviser and get expert advice and help with their PIP claim form then they should also get that same value from our website.
+			p It’s really important that people who get advice from us online are involved in developing and testing the changes we’re making to our online advice.
 
-			p From 15 February people will be able to do just that. We’ll be publishing new content that focuses on the help people need and not the nuances and complications of the DWP claim form, assessment criteria and unhelpful guidance (all 70,000-plus jargon-filled words of it),
-
-
-		.title__subheading--footer
-			p Share this page
-				br
-				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
-				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
-				a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
-				a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
+			p You can use the form below to sign up to help with future research and testing. We will regularly send out short tasks to complete online. All activities are completely optional and you can unsubscribe completely at any time using the link at the bottom of our emails.
 
 		.well(style="background-color:#fff;")
 			fieldset
-				h2(style="margin-top:.2rem;") Add your comments
+				h2(style="margin-top:.2rem;") Sign up here
+				p If you would like to test any of the new or future research, content and design
 
 				label(for="name") Your name
 				.search-results__field(style="width:100%; margin-bottom: 10px;")
@@ -67,10 +56,15 @@ block content
 				.search-results__field(style="width:100%;")
 					input(type="email", placeholder="email", value="Email")
 
-			fieldset
-				label(for="exampleTextarea") Your comments
-				textarea#exampleTextarea(rows="3", style="width:100%; margin-bottom: 10px;")
-
 				button.btn.btn-secondary.right-button-icon Submit
+
+
+		.title__subheading--footer
+			p Share this page
+				br
+				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
+				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
+				a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
+				a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
 
 		//.well(style="background-color: #f2f8ff; border: 0px #dfdfdf solid;")
