--- a/libs/jade/blog-post.jade
+++ b/libs/jade/blog-post.jade
@@ -48,12 +48,11 @@ block content
 
 
 		.title__subheading--footer
-			p Share this page
-				br
-				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
-				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
-				a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
-				a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
+			p Share this page. #[a(#) Find out more about sharing.]
+			a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
+			a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
+			a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
+			a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
 
 		.well(style="background-color:#fff;")
 			fieldset
