Removed the print button from the toolbar and moved the post subtext into the toolbar to simplify the design

--- a/libs/jade/blog-post.jade
+++ b/libs/jade/blog-post.jade
@@ -20,7 +20,7 @@ block content
 		div
 			h1(style="margin-top:0.2rem;") Working with advisers to design new PIP content
 
-			p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design]
+			//p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design]
 
 			block toolbars
 				include ../template/toolbar-blog.jade
