--- a/libs/template/toolbar-blog.jade
+++ b/libs/template/toolbar-blog.jade
@@ -1,5 +1,3 @@
 .title__subheading
-	span.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Content]
-	| &nbsp;&nbsp;|&nbsp;&nbsp;
-	a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Share this post
+	span.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Research], #[a(href="#") Content]
 	//a.a-social-print(href="javascript:window.print();", data-track="Print") Print
