Update spaceing on headings

--- a/libs/jade/blog-get-involved.jade
+++ b/libs/jade/blog-get-involved.jade
@@ -7,7 +7,7 @@ block settings
 
 extends ../template/template-blog.jade
 
-block breadcrumbs
+//block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "blog-home.html"},
 		{title: "Get involved"}])
@@ -20,7 +20,7 @@ block content
 		div
 			h1(style="margin-top:0.2rem;") Get involved
 
-			block toolbars
+			//block toolbars
 				include ../template/toolbar-blog.jade
 
 			p The digital team is redesigning our online content and building a new case management system for Citizens Advice based on user need.
