--- a/libs/jade/blog-home-1.jade
+++ b/libs/jade/blog-home-1.jade
@@ -7,7 +7,7 @@ block settings
 
 extends ../template/nav-v1.jade
 
-block breadcrumbs
+//block breadcrumbs
 	+breadcrumbs([
 		{title: "Home"}])
 	//.row
