--- a/libs/jade/blog-home.jade
+++ b/libs/jade/blog-home.jade
@@ -17,7 +17,7 @@ block sidebar
 block content
 	.articleContent
 		.flex-container.flex-row
-			.title__subheading--blog
+			.title__subheading--blog(style="margin-top:-1.5rem;")
 				//.blog-tag
 					| Research
 				//.blog-tag
