--- a/libs/jade/blog-team.jade
+++ b/libs/jade/blog-team.jade
@@ -7,7 +7,7 @@ block settings
 
 extends ../template/template-blog.jade
 
-block breadcrumbs
+//block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "blog-home.html"},
 		{title: "The Team"}])
