--- a/libs/template/template-blog.jade
+++ b/libs/template/template-blog.jade
@@ -139,7 +139,8 @@ html
 		else
 			header.styleguide--header
 				.styleguide--header--content
-					img(src="images/ca-logo-hz-white-280px.svg")
+					a(href="blog-home.html")
+						img(src="images/ca-logo-hz-white-280px.svg")
 					.styleguide--header--content-nav
 						a(href="blog-team.html") The Team
 						a(href="#") About
