--- a/libs/jade/blog-post.jade
+++ b/libs/jade/blog-post.jade
@@ -7,7 +7,7 @@ block settings
 
 extends ../template/template-blog.jade
 
-block breadcrumbs
+//block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "blog-home.html"},
 		{title: "Working with advisers to design new PIP content"}])
