Hide webkit spinners on dob fields

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -197,6 +197,12 @@ input[type="file"] {
     }
 }
 
+/* Hide input steppers on webkit */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+}
 
 // Reset height for textareas
 textarea.form__field {
