--- a/libs/jade/blog-post.jade
+++ b/libs/jade/blog-post.jade
@@ -73,7 +73,7 @@ block content
 				div(style="clear:both;")
 					h3.col-xs-8(style="width: 60%; display: inline-block;") Paul Chanthapanya
 					p.col-xs-4.small(style="width: 39%; display: inline-block; text-align: right;") Posted yesterday. #[a Reply]
-				p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tellus tortor, ullamcorper eu placerat eget, suscipit vel quam. In sit amet massa semper, ultricies nulla at, vestibulum nulla. Nulla id arcu quis odio molestie porttitor et id lacus. In fermentum aliquet libero eget rutrum.
+				p In sit amet massa semper, ultricies nulla at, vestibulum nulla. Nulla id arcu quis odio molestie porttitor et id lacus. In fermentum aliquet libero eget rutrum.
 
 		.well(style="background-color:#fff;")
 			fieldset
