--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -87,6 +87,8 @@ block content
 					//	a(href="advisor.html") Advisor content
 					li
 						a(href="contents-page.html") Contents pages
+					li
+						a(href="form-error.html") Form validation
 					//li
 						a(href="section-index-dev.html") Section index development
 					//li
