Removed valid form styles

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -180,7 +180,7 @@ select {
             display: block !important;
         }
     }
-    &:required:valid {
+    /*&:required:valid {
         border: 2px solid @green;
         border-radius: 0;
         background-image: url("assets/images/green-tick.svg");
@@ -192,7 +192,7 @@ select {
         & ~ .valid {
             display: block !important;
         }
-    }
+    }*/
     &:focus {
         //border-width: 1px;
         outline: 2px solid @heritage-yellow;
