--- a/libs/jade/form-error.jade
+++ b/libs/jade/form-error.jade
@@ -36,7 +36,7 @@ block content
 
             fieldset
                 label(for="name") Name
-                input#name(placeholder="", type="text", value="Eliot")
+                input#name(placeholder="", type="text", value="Eliot", required)
 
             .form-group-date
                 legend Date of birth
