--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -168,18 +168,15 @@ select {
     padding: @box-spacing-vertical @box-spacing-horizontal;
     border-radius: @form-border-radius;
     &:required:invalid {
-        border: 1px solid @red;
-        outline: 1px solid @red;
-        border-radius: 0;
+        //outline: 2px solid @red;
+        border-color: @red;
+        //border-radius: 0;
         background-image: url("assets/images/red-cross.svg");
-        padding-right: 2.25em;
+        //padding-right: 2.25em;
         background-repeat: no-repeat;
         background-position: center right .6em;
         -webkit-background-size: 1.5em 1.5em;
         background-size: 1.5em 1.5em;
-        & ~ .invalid {
-            display: block !important;
-        }
     }
     /*&:required:valid {
         border: 2px solid @green;
