Restored outline on radio and checkboxes for older browsers (and ff)

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -276,6 +276,9 @@ textarea.form__field {
                 border-color: @blue-light;
             }
         }
+        &:focus {
+            outline: 2px solid @heritage-yellow;
+        }
         &:focus:before {
             border: 2px solid @heritage-yellow;
             border-radius: 0;
