--- a/libs/jade/witness-form-complete.jade
+++ b/libs/jade/witness-form-complete.jade
@@ -19,18 +19,16 @@ block content
 			.callout--confirmation 
 				p Your form has been submitted. Our reference number, if you need to contact us, is:
 				h2 1234567
-				p Would you like a copy of your submission?
+				//p Would you like a copy of your submission?
 				//button.btn-secondary.email-button-icon(type="button") Email
-				button.btn-secondary.print-button-icon(type="button") Print
-
-			//h2 Make another referral
-			//p#[a(href="#") Witness for this case]
-			//p#[a(href="#") Witness for a different case]
+				button.btn-secondary.print-button-icon(type="button") Print submission
+				a.button.btn-secondary.right-button-icon(type="button", href="witness-form-4.html") Refer another witness for this case
 
 			.callout--related
 				h3 What happens next?
 				p Someone from the Witness Service will be in touch with witness you have referred within two working days. If you would like to get in touch with the Witness Service to discuss a referral you can call us on our dedicated partner phone number:
 				p 0300 330 1161
-
 				p Find out more #[a(href="https://www.citizensadvice.org.uk/about-us/citizens-advice-witness-service/about-the-citizens-advice-witness-service/") about the Witness Service].
-				
+
+				h3 Next steps
+				p #[a(href="#") Refer a witness for a different case]
