removed border radius from invalid styling to match focus styling

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -170,7 +170,7 @@ select {
     &:required:invalid {
         //outline: 2px solid @red;
         border-color: @red;
-        //border-radius: 0;
+        border-radius: 0;
         background-image: url("assets/images/red-cross.svg");
         //padding-right: 2.25em;
         background-repeat: no-repeat;
