--- a/libs/template/template-blog.jade
+++ b/libs/template/template-blog.jade
@@ -288,7 +288,7 @@ html
 								| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 
 		else
-			#footer.main-footer(data-track-zone="footer")
+			//#footer.main-footer(data-track-zone="footer")
 				.footer--legal
 					.footer--legal--content
 						img(alt="", src="images/ca_wo-logo-100px.svg")
@@ -296,6 +296,48 @@ html
 							| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 							br
 							| Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
+						#footer.main-footer(data-track-zone="footer")
+			.footer-content.flex-row
+				.flex-column.col-xs-12.col-md-9
+					h3 Get Advice
+					.flex-row(style="padding: 0;")
+						.col-xs-12.col-sm-4
+							ul
+								li #[a(href="#") Benefits]
+								li #[a(href="#") Work]
+								li #[a(href="#") Debt and money]
+								li #[a(href="#") Consumer]
+						.col-xs-12.col-sm-4
+							ul
+								li #[a(href="#") Relationships]
+								li #[a(href="#") Housing]
+								li #[a(href="#") Law and rights]
+								li #[a(href="#") Discrimination]
+
+						.col-xs-12.col-sm-4
+							ul
+								li #[a(href="#") Tax]
+								li #[a(href="#") Healthcare]
+								li #[a(href="#") Education]
+								li #[a(href="#") A to Z of advice]
+
+					.flex-column.col-xs-12.col-md-3
+						h3 Information
+						ul
+							li #[a(href="#") Help]
+							li #[a(href="#") Cymraeg]
+							li #[a(href="#") Terms and conditions]
+							li #[a(href="#") Privacy and cookies]
+
+				.footer--legal
+					.footer--legal--content
+						img(alt="", src="images/ca_wo-logo-100px.svg")
+						p
+							| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
+							br
+							| Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
+
+
 
 		//.notice
 			.notice__content
