Tidying how an example with two code snippits looks

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -261,6 +261,12 @@ pre[class*="language-"] {
     font-size: .85rem;
     max-height: 15rem;
 }
+
+pre[class*="language-"] + pre[class*="language-"] {
+    border-radius: 2px;
+    margin-top: -.45rem;
+}
+
 /***************************************************************************
 * Cards
 * Boxes for captions, links, callouts, not related to content
