--- a/libs/template/template-blog.jade
+++ b/libs/template/template-blog.jade
@@ -296,36 +296,31 @@ html
 							| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 							br
 							| Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
-						#footer.main-footer(data-track-zone="footer")
-			.footer-content.flex-row
-				.flex-column.col-xs-12.col-md-9
-					h3 Get Advice
-					.flex-row(style="padding: 0;")
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Benefits]
-								li #[a(href="#") Work]
-								li #[a(href="#") Debt and money]
-								li #[a(href="#") Consumer]
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Relationships]
-								li #[a(href="#") Housing]
-								li #[a(href="#") Law and rights]
-								li #[a(href="#") Discrimination]
+			#footer.main-footer(data-track-zone="footer")
+				.footer-content.flex-row
+					.flex-column.col-xs-12.col-md-9
+						h3 Digital Blog
+						.flex-row(style="padding: 0;")
+							.col-xs-12.col-sm-4
+								ul
+									li #[a(href="#") The Team]
+									li #[a(href="#") About]
 
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Tax]
-								li #[a(href="#") Healthcare]
-								li #[a(href="#") Education]
-								li #[a(href="#") A to Z of advice]
+							.col-xs-12.col-sm-4
+								ul
+									li #[a(href="#") Get Involved]
+									li #[a(href="#") Jobs]
+
+							.col-xs-12.col-sm-4
+								ul
+									li #[a(href="#") Content style guide]
+									li #[a(href="#") UI design guide]
 
 					.flex-column.col-xs-12.col-md-3
 						h3 Information
 						ul
-							li #[a(href="#") Help]
-							li #[a(href="#") Cymraeg]
+							//li #[a(href="#") Help]
+							//li #[a(href="#") Cymraeg]
 							li #[a(href="#") Terms and conditions]
 							li #[a(href="#") Privacy and cookies]
 
