--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -8,6 +8,7 @@ html.no-js
 		meta(content="IE=edge", http-equiv="X-UA-Compatible")
 		meta(name="keywords")
 		meta(name="description")
+		base(href="/")
 
 		title Citizens Advice style guide
 			- if (typeof title !== "undefined")
