Added js to fix anchor link issue caused by using the base tag

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -39,7 +39,7 @@ block content
 					li
 						a(href="forms/field-groups.html") Field groups
 					li
-						a(href="forms/form-error.html") Form validation
+						a(href="forms/validation.html") Form validation
 
 			.span4-sm
 				h2#Modules Modules
